Update font dispaly to use swap to avoid ensure text remains visible warning via https://web.dev/font-display/?utm_source=lighthouse&utm_medium=devtools

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'Bebas Neue';
   src: local('Bebas Neue'), url(./fonts/BebasNeue-Regular.ttf) format('opentype');
+  font-display: swap;
 }
 
 body {
